# usholidays

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  prestart.sh  pyproject.toml  template.env
src/usholidays/: alembic.ini  main.py
src/usholidays/alembic/: env.py
src/usholidays/alembic/versions/: 2025_06_10_0458-876517eb9809_initial_migration.py  2025_06_10_1226-e9fad61b050e_initial_migration.py  2025_06_10_1313-226b977c1746_initial_migration.py  2025_06_10_2345-10074aca99a3_change_datetime_to_date_in_holidays.py  2025_06_12_0131-c1cbefb4c2a1_change_datetime_to_date_in_holidays.py  2025_06_13_0150-b68ea8bf4423_create_users_table.py
src/usholidays/auth/: fastapi_users.py  schemas.py  utils.py  views.py
src/usholidays/auth/dependencies/: __init__.py  strategy.py  user_manager.py
src/usholidays/auth/models/: User.py  __init__.py
src/usholidays/core/: config.py  dependencies.py  utils.py
src/usholidays/core/models/: __init__.py  base.py
src/usholidays/countryholidays/: schemas.py  services.py  utils.py  views.py
src/usholidays/countryholidays/models/: __init__.py  holiday.py  holidaystate.py  state.py
src/usholidays/creds/: rsa.pem  rsa.pub  temp.pem  temp.pub
tests/: conftest.py  test_api.py  test_service.py  utils.py
