[project]
name = "usholidays"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ilyas Deev", email = "thevladiinoy@gmail.com" }
]
dependencies = [
    "holidays>=0.74",
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "asyncpg>=0.30.0",
    "alembic>=1.16.1",
    "fastapi-filter[sqlalchemy]>=2.0.1",
    "pydantic-settings>=2.9.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "sqlalchemy-utils>=0.41.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.11.13",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/usholidays"]

[tool.uv]
cache-dir = "./.uv_cache"

[tool.pytest.ini_options]
pythonpath = [".", "src", "src/usholidays", "tests"]
